bootstrap/kubernetes/apps/tools/homeassistant/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
  name: home-assistant
  namespace: tools
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
      annotations: {}
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-data
        - name: config-file
          configMap:
            name: home-assistant-configuration
      containers:
        - name: home-assistant-app
          image: homeassistant/home-assistant:2026.10.0
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /config/configuration.yaml
              name: config-file
              subPath: configuration.yaml
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 10
