bootstrap/kubernetes/apps/tools/homeassistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant
  namespace: tools
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
